<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_data_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="210dp"
                android:background="@drawable/bg_judul"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingTop="6dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="@string/judul_detail" />

            <ImageButton
                android:id="@+id/btn_back_detail"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:src="@drawable/back"
                tools:ignore="SpeakableTextPresentCheck" />
        </FrameLayout>


        <TextView
            android:id="@+id/tv_data_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="@string/isi_detail" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/detail_highlight"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="@string/isi_highlight" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fasilitas"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_fasilitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="@string/isi_fasilitas" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tiket_masuk"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="34dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="@string/harga_tiket" />

    </LinearLayout>
</ScrollView>